deployment/base/gogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30060
      name: service
