deployment/base/gogs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gogs.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gogs-service
                port:
                  number: 30090
